--- a/Unit07/scss/_large.scss
+++ b/Unit07/scss/_large.scss
@@ -95,6 +95,12 @@ input{
     }
 }
 
+.blogs {
+    margin: 0;
+    margin-left: 10%;
+    
+}
+
 .faqs {
     display: block;
     background-color: rgb(240, 240, 240);
@@ -124,4 +130,9 @@ h2 {
 
 div.social {
     margin: 0 24rem;
+}
+
+.scooch {
+    margin-left: 1.1%;
+    margin-bottom: .5rem; 
 }
